--- a/src/style.css
+++ b/src/style.css
@@ -740,7 +740,17 @@ footer {
         flex-direction: column;
         justify-content: space-around;
         background-color: #F2EDE1;
+        transition: 0.5s;
         height: 0;
+    }
+    #mobile-menu a {
+        visibility: hidden;
+        transition: 0.2s;
+        color: #F2EDE1;
+    }
+    #mobile-menu.open a {
+        visibility: visible;
+        color: #503D3C;
     }
     #mobile-menu.open {
         position: fixed;
@@ -749,16 +759,16 @@ footer {
         left: 0;
         width: 100%;
         height: 100vh;
-        transition: 0.5s;
         visibility: visible;
         z-index: 20;
     }
     .header__menu__mobile li {
         list-style: none;
+        transition: 0;
     }
     .header__logo {
         max-width: 30%;
-        margin: 90px auto 0;
+        margin: 160px auto 0 !important;
     }
     .header__logo img {
         width: 100%;
